app/javascript/styles/mastodon/components.scss
/* ... */
.notification-ungrouped {
  padding: 16px 24px;
  border-bottom: 1px solid var(--background-border-color);

  &__header {
    display: flex;
    align-items: center;
    gap: 8px;
    color: $dark-text-color;
    font-size: 15px;
    line-height: 22px;
    font-weight: 500;
    padding-inline-start: 24px;
    margin-bottom: 16px;

    &__icon {
      display: flex;
      align-items: center;
      justify-content: center;
      flex: 0 0 auto;

      .icon {
        width: 16px;
        height: 16px;
      }
    }

    a {
      color: inherit;
      text-decoration: none;
    }
  }

  .status {
    border: 0;
    padding: 0;

    &__avatar {
      width: 40px;
      height: 40px;
    }
  }

  .status__wrapper-direct {
    background: transparent;
  }

  $icon-margin: 48px; // 40px avatar + 8px gap

  .status__content,
  .status__action-bar,
  .media-gallery,
  .video-player,
  .audio-player,
  .attachment-list,
  .picture-in-picture-placeholder,
  .more-from-author,
  .status-card,
  .hashtag-bar,
  .content-warning,
  .filter-warning {
    margin-inline-start: $icon-margin;
    width: calc(100% - $icon-margin);
  }

  .more-from-author {
    width: calc(100% - $icon-margin + 2px);
  }

  .status__content__read-more-button {
    margin-inline-start: $icon-margin;
  }

  .notification__report {
    border: 0;
    padding: 0;
  }
}

.notification-group--unread,
.notification-ungrouped--unread {
  position: relative;

  &::before {
    content: '';
    position: absolute;
    top: 0;
    inset-inline-start: 0;
    width: 100%;
    height: 100%;
    border-inline-start: 4px solid $highlight-text-color;
    pointer-events: none;
  }
}

.hover-card-controller[data-popper-reference-hidden='true'] {
  opacity: 0;
  pointer-events: none;
}

.hover-card {
  box-shadow: var(--dropdown-shadow);
  background: var(--modal-background-color);
  backdrop-filter: var(--background-filter);
  border: 1px solid var(--modal-border-color);
  border-radius: 8px;
  padding: 16px;
  width: 270px;
  display: flex;
  flex-direction: column;
  gap: 12px;

  &--loading {
    position: relative;
    min-height: 100px;
  }

  &__name {
    display: flex;
    gap: 12px;
    text-decoration: none;
    color: inherit;
  }

  &__number {
    font-size: 15px;
    line-height: 22px;
    color: $secondary-text-color;

    strong {
      font-weight: 700;
    }
  }

  &__text-row {
    display: flex;
    flex-direction: column;
    gap: 8px;
  }

  &__bio {
    color: $secondary-text-color;
    font-size: 14px;
    line-height: 20px;
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    max-height: 2 * 20px;
    overflow: hidden;

    p {
      margin-bottom: 0;
    }

    a {
      color: inherit;
      text-decoration: underline;

      &:hover,
      &:focus,
      &:active {
        text-decoration: none;
      }
    }
  }

  &__note {
    &-label {
      color: $dark-text-color;
      font-size: 12px;
      font-weight: 500;
      text-transform: uppercase;
    }

    dd {
      white-space: pre-line;
      color: $secondary-text-color;
      overflow: hidden;
      line-clamp: 3; // Not yet supported in browers
      display: -webkit-box; // The next 3 properties are needed
      -webkit-line-clamp: 3;
      -webkit-box-orient: vertical;
    }
  }

  .display-name {
    font-size: 15px;
    line-height: 22px;

    bdi {
      font-weight: 500;
      color: $primary-text-color;
    }

    &__account {
      display: block;
      color: $dark-text-color;
    }
  }

  .account-fields {
    color: $secondary-text-color;
    font-size: 14px;
    line-height: 20px;

    a {
      color: inherit;
      text-decoration: none;

      &:focus,
      &:hover,
      &:active {
        text-decoration: underline;
      }
    }

    dl {
      display: flex;
      align-items: center;
      gap: 4px;

      dt {
        flex: 0 1 auto;
        color: $dark-text-color;
        min-width: 0;
        overflow: hidden;
        white-space: nowrap;
        text-overflow: ellipsis;
      }

      dd {
        flex: 1 1 auto;
        font-weight: 500;
        min-width: 0;
        overflow: hidden;
        white-space: nowrap;
        text-overflow: ellipsis;
        text-align: end;
      }

      &.verified {
        dd {
          display: flex;
          align-items: center;
          justify-content: flex-end;
          gap: 4px;
          overflow: hidden;
          white-space: nowrap;
          color: $valid-value-color;

          & > span {
            overflow: hidden;
            text-overflow: ellipsis;
          }

          a {
            font-weight: 500;
          }

          .icon {
            width: 16px;
            height: 16px;
          }
        }
      }
    }
  }
}

.content-warning {
  background: rgba($ui-highlight-color, 0.05);
  color: $secondary-text-color;
  border-top: 1px solid;
  border-bottom: 1px solid;
  border-color: rgba($ui-highlight-color, 0.15);
  padding: 8px (5px + 8px);
  position: relative;
  font-size: 15px;
  line-height: 22px;

  p {
    margin-bottom: 8px;
  }

  .link-button {
    font-size: inherit;
    line-height: inherit;
    font-weight: 500;
  }

  &::before,
  &::after {
    content: '';
    display: block;
    position: absolute;
    height: 100%;
    background: url('../images/warning-stripes.svg') repeat-y;
    width: 5px;
    top: 0;
  }

  &::before {
    border-start-start-radius: 4px;
    border-end-start-radius: 4px;
    inset-inline-start: 0;
  }

  &::after {
    border-start-end-radius: 4px;
    border-end-end-radius: 4px;
    inset-inline-end: 0;
  }

  &--filter::before,
  &--filter::after {
    background-image: url('../images/filter-stripes.svg');
  }
}

